--- a/style.css
+++ b/style.css
@@ -84,6 +84,31 @@ body {
   margin: 2rem auto;
 }
 
+.parent__description {
+  font-size: 2rem;
+  line-height: 1.3;
+  display: block;
+  width: 35rem;
+  text-align: center;
+}
+
+.spinner {
+  display: block;
+  height: 8rem;
+  margin: 4.8rem auto;
+  animation: rotate 2.5s infinite linear;
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
 
 
 /*************************/
@@ -145,7 +170,8 @@ body {
 .condition {
   display: flex;
   flex-direction: column;
-  align-items: flex-end;
+  align-items: center;
+  margin-left: 8rem;
 }
 
 .condition__description {
@@ -153,9 +179,8 @@ body {
 }
 
 .condition__image {
-  height: 8rem;
-  width: 8rem;
-  margin-right: 1rem;
+  height: 10rem;
+  width: 10rem;
 }
 
 /*************************/
