--- a/style.css
+++ b/style.css
@@ -54,11 +54,13 @@ body {
 .grid--3 {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  align-items: center;
 }
 
 .grid--7 {
   display: grid;
   grid-template-columns: repeat(7, 1fr);
+  align-items: center;
 }
 
 .flex--v {
@@ -71,7 +73,7 @@ body {
 }
 
 .line--v {
-  height: auto;
+  height: 80%;
   width: 2px;
   background-color: var(--white);
   margin: 0.5rem auto;
@@ -88,7 +90,6 @@ body {
   font-size: 2rem;
   line-height: 1.3;
   display: block;
-  width: 35rem;
   text-align: center;
 }
 
@@ -194,4 +195,20 @@ body {
 .city__time {
   font-size: 3.6rem;
   justify-self: end;
+}
+
+/*************************/
+/* Queries */
+/*************************/
+
+@media (max-width: 25em) {
+  html {
+    font-size: 50%;
+  }
+}
+
+@media (max-width: 20em) {
+  html {
+    font-size: 43.75%;
+  }
 }
