--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ body {
   font-weight: 400;
   color: var(--font-color);
   background-color: var(--blue-background);
+  position: relative;
 }
 
 .main {
@@ -108,6 +109,25 @@ body {
   100% {
     transform: rotate(360deg);
   }
+}
+
+.copyright {
+  width: 100vw;
+  font-size: 1.6rem;
+  top: 90vh;
+  text-align: center;
+  position: absolute;
+  line-height: 1.5;
+}
+
+.name {
+  color: var(--white);
+  text-decoration: none;
+  font-weight: 700;
+}
+
+.name:hover {
+  color: var(--gray);
 }
 
 
